# StarQC

./: .gitignore  .pre-commit-config.yaml  LICENSE  demo_run.py  pyproject.toml  stream_guard_patch.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  QUICKSTART.md  README.md  SPEC.md  TEST_PLAN.md
starqc/: __init__.py  clean.py  cli.py  config.py  detect.py  filters.py  interpolate.py  provenance.py  qc.py  simulate.py  stream.py  version.py
tests/: test_detect.py  test_end_to_end.py  test_filters.py  test_interpolate.py  test_qc.py  test_streaming.py
